[package]
name = "basel"
version = "0.0.0"
edition = "2021"

[dependencies]
geojson = "0.24.1"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing", "macros"] }

[features]
bl10010 = []
bl10020 = []
bl10030 = []
bl10040 = []
bl10050 = []
bl10060 = []
bl10070 = []
bl10080 = []
bl10090 = []
bl10100 = []
bl10110 = []
bl10130 = []
bl10140 = []
bl10160 = []
bl10170 = []
bl10180 = []
bl10190 = []
bl10200 = []
bl10210 = []
bl10220 = []
bl10230 = []
bl10240 = []
bl10250 = []
bl10260 = []
bl10270 = []
bl10290 = []
bl10300 = []
bl10310 = []
bl10320 = []
bl10330 = []
bl10340 = []
bl10350 = []
bl10360 = []
bl10370 = []
bl10380 = []
bl10390 = []
bl10400 = []
bl10410 = []
bl10420 = []
bl10430 = []
bl10440 = []
bl10450 = []
bl10460 = []
bl10470 = []
bl10480 = []
bl10490 = []
bl10500 = []
bl10510 = []
bl10520 = []
bl10530 = []
bl10540 = []
bl10550 = []
bl10560 = []
bl10570 = []
bl10580 = []
bl10590 = []
bl10600 = []
bl10610 = []
bl10620 = []
bl10630 = []
bl10640 = []
bl10650 = []
bl10660 = []
bl10670 = []
bl10680 = []
bl10700 = []
bl10710 = []
bl10740 = []
bl10840 = []
bl10910 = []
bl10950 = []
bl10960 = []
bl10990 = []
bl11010 = []
bl11050 = []
bl11080 = []
bl11100 = []
bl11150 = []
bl11160 = []
bl11200 = []
bl11450 = []
bl11460 = []
bl11470 = []
bl11540 = []
bl11590 = []
bl11600 = []
bl11610 = []
bl11660 = []
bl11710 = []
bl11720 = []
bl11730 = []
bl11740 = []
bl11750 = []
bl11760 = []
bl11770 = []
bl11780 = []
bl11790 = []
bl11800 = []
bl11810 = []
bl11820 = []
bl11830 = []
bl11840 = []
bl11850 = []
bl11860 = []
bl11870 = []
bl11880 = []
bl11890 = []
bl11900 = []
bl11910 = []
bl11920 = []
bl11930 = []
bl11940 = []
bl11950 = []
bl11960 = []
bl11970 = []
bl11990 = []
bl12000 = []
bl12020 = []
bl12030 = []
bl12060 = []
bl12070 = []
bl12080 = []
bl12090 = []
bl12100 = []
bl12140 = []
bl12150 = []
bl12160 = []
bl12170 = []
bl12180 = []
bl12190 = []
bl12200 = []
bl12240 = []
bl12250 = []
bl12270 = []
bl12280 = []
bl12290 = []
bl12300 = []
bl12310 = []
bl12320 = []
bl12330 = []
bl12340 = []
bl12370 = []
bl12380 = []
bl12390 = []
bl12400 = []
bl12410 = []
bl12420 = []
bl12430 = []
bl12440 = []
bl12450 = []
bl12460 = []
bl12470 = []
bl12480 = []
bl12490 = []
bl12500 = []
bl12510 = []
bl12520 = []
bl12530 = []
bl12540 = []
bl12550 = []
bl12560 = []
bl12570 = []
bl12580 = []
bl12610 = []
bs100003 = []
bs100004 = []
bs100005 = []
bs100006 = []
bs100007 = []
bs100008 = []
bs100009 = []
bs100010 = []
bs100011 = []
bs100013 = []
bs100014 = []
bs100015 = []
bs100016 = []
bs100017 = []
bs100018 = []
bs100019 = []
bs100020 = []
bs100021 = []
bs100022 = []
bs100023 = []
bs100024 = []
bs100025 = []
bs100026 = []
bs100027 = []
bs100028 = []
bs100029 = []
bs100030 = []
bs100031 = []
bs100032 = []
bs100033 = []
bs100034 = []
bs100035 = []
bs100036 = []
bs100037 = []
bs100038 = []
bs100039 = []
bs100040 = []
bs100041 = []
bs100042 = []
bs100043 = []
bs100044 = []
bs100046 = []
bs100047 = []
bs100048 = []
bs100049 = []
bs100050 = []
bs100051 = []
bs100052 = []
bs100053 = []
bs100054 = []
bs100056 = []
bs100057 = []
bs100058 = []
bs100059 = []
bs100060 = []
bs100061 = []
bs100062 = []
bs100063 = []
bs100064 = []
bs100065 = []
bs100066 = []
bs100067 = []
bs100068 = []
bs100069 = []
bs100070 = []
bs100071 = []
bs100072 = []
bs100073 = []
bs100074 = []
bs100075 = []
bs100076 = []
bs100077 = []
bs100078 = []
bs100079 = []
bs100080 = []
bs100081 = []
bs100082 = []
bs100083 = []
bs100084 = []
bs100085 = []
bs100086 = []
bs100087 = []
bs100088 = []
bs100089 = []
bs100090 = []
bs100092 = []
bs100093 = []
bs100094 = []
bs100095 = []
bs100096 = []
bs100097 = []
bs100098 = []
bs100099 = []
bs100100 = []
bs100101 = []
bs100102 = []
bs100103 = []
bs100104 = []
bs100105 = []
bs100106 = []
bs100107 = []
bs100108 = []
bs100109 = []
bs100110 = []
bs100111 = []
bs100112 = []
bs100113 = []
bs100114 = []
bs100116 = []
bs100117 = []
bs100118 = []
bs100120 = []
bs100121 = []
bs100122 = []
bs100123 = []
bs100124 = []
bs100125 = []
bs100126 = []
bs100127 = []
bs100128 = []
bs100129 = []
bs100131 = []
bs100132 = []
bs100133 = []
bs100134 = []
bs100135 = []
bs100136 = []
bs100137 = []
bs100138 = []
bs100139 = []
bs100143 = []
bs100144 = []
bs100145 = []
bs100146 = []
bs100148 = []
bs100149 = []
bs100151 = []
bs100152 = []
bs100153 = []
bs100154 = []
bs100155 = []
bs100156 = []
bs100158 = []
bs100160 = []
bs100161 = []
bs100162 = []
bs100163 = []
bs100164 = []
bs100165 = []
bs100168 = []
bs100169 = []
bs100170 = []
bs100171 = []
bs100172 = []
bs100173 = []
bs100174 = []
bs100175 = []
bs100176 = []
bs100178 = []
bs100179 = []
bs100180 = []
bs100181 = []
bs100182 = []
bs100183 = []
bs100186 = []
bs100187 = []
bs100188 = []
bs100189 = []
bs100191 = []
bs100192 = []
bs100193 = []
bs100194 = []
bs100195 = []
bs100196 = []
bs100197 = []
bs100198 = []
bs100199 = []
bs100200 = []
bs100201 = []
bs100202 = []
bs100206 = []
bs100207 = []
bs100213 = []
bs100214 = []
bs100215 = []
bs100216 = []
bs100223 = []
bs100225 = []
bs100226 = []
bs100227 = []
bs100229 = []
bs100230 = []
bs100231 = []
bs100232 = []
bs100233 = []
bs100234 = []
bs100235 = []
bs100236 = []
bs100238 = []
bs100239 = []
bs100240 = []
bs100241 = []
bs100242 = []
bs100243 = []
bs100244 = []
bs100245 = []
bs100246 = []
bs100247 = []
bs100249 = []
bs100250 = []
bs100251 = []
bs100252 = []
bs100253 = []
bs100254 = []
bs100255 = []
bs100256 = []
bs100257 = []
bs100259 = []
bs100268 = []
bs100269 = []
bs100270 = []
bs100271 = []
bs100272 = []
bs100273 = []
bs100274 = []
bs100275 = []
bs100276 = []
bs100277 = []
bs100278 = []
bs100279 = []
bs100280 = []
bs100281 = []
bs100282 = []
bs100283 = []
bs100284 = []
bs100285 = []
bs100286 = []
bs100287 = []
bs100288 = []
bs100290 = []
bs100291 = []
bs100292 = []
bs100293 = []
bs100294 = []
bs100295 = []
bs100296 = []
bs100297 = []
bs100298 = []
bs100299 = []
bs100300 = []
bs100301 = []
bs100302 = []
bs100304 = []
bs100305 = []
bs100306 = []
bs100307 = []
bs100308 = []
bs100309 = []
bs100310 = []
bs100311 = []
bs100312 = []
bs100313 = []
bs100314 = []
bs100316 = []
bs100317 = []
bs100318 = []
bs100319 = []
bs100320 = []
bs100321 = []
bs100323 = []
bs100325 = []
bs100326 = []
bs100327 = []
bs100328 = []
bs100329 = []
bs100330 = []
bs100331 = []
bs100332 = []
bs100333 = []
bs100334 = []
bs100335 = []
bs100336 = []
bs100337 = []
bs100338 = []
bs100339 = []
bs100340 = []
bs100341 = []
bs100342 = []
bs100345 = []
bs100346 = []
bs100348 = []
bs100352 = []
bs100353 = []
bs100356 = []
bs100357 = []
bs100358 = []
bs100360 = []
bs100361 = []
bs100362 = []
bs100363 = []
bs100365 = []
bs100369 = []
bs100370 = []
bs100379 = []
bs100380 = []
bs100381 = []
bs100382 = []
bs100383 = []
bs100384 = []
bs100385 = []
bs100386 = []
bs100387 = []
bs100388 = []
bs100391 = []
bs100392 = []
bs100393 = []
bs100394 = []
bs100399 = []
bs100400 = []
bs100401 = []

[package.metadata.docs.rs]
all-features = true
